# smart-strike

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
config/: config.py
domain/: modelo_acao.py
infra/: cloud_run.tf  main.tf  terraform.tfvars  variables.tf
infra/modules/bigquery/: main.tf
pipelines/: execucao_diaria.py
repositories/: bigquery_repo.py
services/: coleta_yf_service.py
utils/: monitor_execucao.py
