[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | build
  | dist
  | \.eggs
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | \.idea
  | __pycache__
)/
'''

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["app"]

[tool.ruff.lint]
select = ["E", "F", "B", "W"]
ignore = ["F401", "B028"]  # F401: import não usado, B028: warnings sem stacklevel

[tool.ruff.format]
quote-style = "double"
preview = true

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
